<resources>
    <string name="app_name">Flow Planner</string>
    <string name="description">Description</string>
    <string name="plan_name">Plan Name</string>
    <string name="category">Category</string>
    <string name="save_button">Save</string>
    <string name="create_plan">Create New Plan</string>
    <string name="create_job">Create New Job</string>
    <string name="job_name">Job Name</string>
    <string name="deadline">Deadline</string>
    <string name="start_time">Start Time</string>
    <string name="jobs">Jobs for this Plan</string>

    <string name="expanded">I\'m the expanded notification.\nCollapse me!</string>
    <string name="collapsed">I\'m the collapsed notification.\nCreated at: %s</string>
    <string name="show_notification">Show Notification</string>
    <string name="custom_notification">I\'m a custom notification.</string>

    <string name="intro_text">This sample demonstrates how a notification is created using the
        <b>NotificationCompatBuilder</b>
        with a custom content view. The layout of the notification is defined as a
        layout resource and inflated as a <b>RemoteViews</b> object.
        \n\nOn API level 16 and above, a different layout is inflated and set as
        the <i>big content view</i>, which is used when the notification is expanded.
        \n\n<b>Use the button below to create the notification.
        \n\nIf your device is running Jelly Bean or above, try expanding or collapsing
        the notification to see the different layouts.</b>
    </string>
    <string name="collapsed_image">A single Android robot waving. Symbolises a collapsed
        notification.
    </string>
    <string name="expanded_image">Two Androids on top of each other. Symbolises an expanded
        notification.
    </string>

</resources>
