<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/planNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/plan_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/categoryET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/planNameET"
        app:layout_constraintStart_toStartOf="@+id/planNameET"
        app:layout_constraintTop_toBottomOf="@+id/planNameET" />


    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/categoryET"
        app:layout_constraintStart_toStartOf="@+id/categoryET"
        app:layout_constraintTop_toBottomOf="@+id/categoryET" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save_button"
        android:textColor="@color/button_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/descriptionET"
        app:layout_constraintTop_toBottomOf="@+id/descriptionET" />

</androidx.constraintlayout.widget.ConstraintLayout>